[package]
name = "common"
version = "0.1.0"
authors = ["Douglas Anderson <hockeybuggy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nanoid = "0.3"
chrono = "0.4"
dynomite = "0.10"
env_logger = "0.8"
futures = "0.3"
lambda = { git = "https://github.com/awslabs/aws-lambda-rust-runtime/", branch = "master"}
log = "0.4"
rusoto_apigatewaymanagementapi = "0.45"
rusoto_core = "0.45"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
