[package]
name = "e2e_tests"
version = "0.1.0"
authors = ["Douglas Anderson <hockeybuggy@gmail.com>"]
edition = "2018"

[dependencies]
env_logger = "0.8"
futures = "0.3"
futures-util = "0.3"
log = "0.4"
url = "2.2"
tokio-tungstenite = { version = "0.12", features = ["tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.3", features = ["full"] }
