[package]
name = "frontend"
version = "0.1.0"
authors = ["Douglas Anderson <hockeybuggy@gmail.com>"]
edition = "2018"
description = "Yew frontend for an full-rust Hearts (the card game) app"
repository = ""
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
common = { path = "../common" }
anyhow = "1.0"
log = "0.4"
serde = "1"
serde_derive = "1"
serde_json = "1.0"
wasm-bindgen = "0.2.67"
wasm-logger = "0.2.0"
yew = "0.17"
